--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>docker-spring-boot</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -92,5 +93,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
